prevent media placeholder from overflowing. Fixes #17

--- a/css/card-block-editor-styles.css
+++ b/css/card-block-editor-styles.css
@@ -2,6 +2,10 @@
 	display: none;
 }
 
+.mrw-card-block .wp-block-media-text__media.components-placeholder {
+	min-height: auto !important;
+}
+
 .aspect-ratio-control {
 	padding: 0 16px 16px;
 }
